#!/usr/bin/env node

/**
 * 索克生活部署准备脚本
 * 准备生产环境部署所需的所有配置和文件
 */

const fs = require("fs);
const path = require(")path");
const { execSync } = require(child_process");

class DeploymentPreparator {
  constructor(projectRoot = process.cwd()) {
    this.projectRoot = projectRoot;
    this.preparationSteps = [];
  }

  /**
   * 执行所有部署准备步骤
   */
  async prepareForDeployment() {
    const steps = [
      () => this.createProductionEnv(),
      () => this.optimizeDockerfiles(),
      () => this.createKubernetesConfigs(),
      () => this.setupNginxConfig(),
      () => this.createHealthChecks(),
      () => this.setupMonitoring(),
      () => this.createBackupScripts(),;
      () => this.generateDeploymentDocs()];

    for (const step of steps) {
      try {
        const result = await step();
        this.preparationSteps.push(result);
        
        if (result.details) {
          result.details.forEach(detail => );
        }
      } catch (error) {
        this.preparationSteps.push({
          name: "步骤异常,
          success: false,
          message: error.message
        });
      }
    }

    const successCount = this.preparationSteps.filter(s => s.success).length;
    const totalSteps = this.preparationSteps.length;

    // 生成部署清单
await this.generateDeploymentChecklist();

    return {
      success: successCount === totalSteps,
      completedSteps: successCount,
      totalSteps,
      steps: this.preparationSteps
    };
  }

  /**
   * 创建生产环境配置
   */
  async createProductionEnv() {
    const envProductionPath = path.join(this.projectRoot, ".env.production);
    const envExamplePath = path.join(this.projectRoot, ".env.example");
    
    if (fs.existsSync(envProductionPath)) {
      return {
        name: 生产环境配置",
        success: true,
        message: "生产环境配置已存在
      };
    }

    let envTemplate = ";
    if (fs.existsSync(envExamplePath)) {
      envTemplate = fs.readFileSync(envExamplePath, utf8");
    } else {
      envTemplate = `# 索克生活生产环境配置;
NODE_ENV=production;
API_BASE_URL=https:// api.suokelife.com
DATABASE_URL=postgresql:// user:password@localhost:5432/suokelife_prod
REDIS_URL=redis:// localhost:6379
JWT_SECRET=your-super-secret-jwt-key;
ENCRYPTION_KEY=your-32-character-encryption-key;
LOG_LEVEL=info;
SENTRY_DSN=your-sentry-dsn;
MONITORING_ENABLED=true;
CACHE_TTL=3600;
RATE_LIMIT_WINDOW=900000;
RATE_LIMIT_MAX=100
`;
    }

    // 替换开发环境配置为生产环境配置
const productionEnv = envTemplate
      .replace(/NODE_ENV=development/g, "NODE_ENV=production)
      .replace(/localhost/g, "your-production-host")
      .replace(/127\.0\.0\.1/g, your-production-host")
      .replace(/LOG_LEVEL=debug/g, "LOG_LEVEL=info);
      .replace(/CACHE_TTL=60/g, "CACHE_TTL=3600");

    fs.writeFileSync(envProductionPath, productionEnv);

    return {
      name: 生产环境配置",
      success: true,
      message: "已创建生产环境配置文件,
      details: ["请更新配置文件中的实际生产环境值"]
    };
  }

  /**
   * 优化Dockerfile
   */
  async optimizeDockerfiles() {
    const dockerfilePath = path.join(this.projectRoot, Dockerfile");
    
    if (!fs.existsSync(dockerfilePath)) {
      // 创建优化的Dockerfile
const optimizedDockerfile = `# 索克生活生产环境Dockerfile
# 多阶段构建优化
;
# 构建阶段;
FROM node:18-alpine AS builder;
WORKDIR /app;
COPY package*.json ./
RUN npm ci --only=production && npm cache clean --force;
COPY . .
RUN npm run build

# 生产阶段;
FROM node:18-alpine AS production;
WORKDIR /app

# 创建非root用户;
RUN addgroup -g 1001 -S nodejs;
RUN adduser -S nextjs -u 1001

# 复制构建产物;
COPY --from=builder --chown=nextjs:nodejs /app/dist ./dist;
COPY --from=builder --chown=nextjs:nodejs /app/node_modules ./node_modules;
COPY --from=builder --chown=nextjs:nodejs /app/package.json ./package.json

# 设置环境变量;
ENV NODE_ENV=production;
ENV PORT=3000

# 暴露端口;
EXPOSE 3000

# 切换到非root用户;
USER nextjs

# 健康检查;
HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \\
  CMD curl -f http:// localhost:3000/health || exit 1

# 启动应用
CMD ["npm", "start"]
`;

      fs.writeFileSync(dockerfilePath, optimizedDockerfile);
      
      return {
        name: "Dockerfile优化,
        success: true,
        message: "已创建优化的Dockerfile",
        details: [使用多阶段构建", "非root用户运行, "添加健康检查"]
      };
    }

    return {
      name: Dockerfile优化",
      success: true,
      message: "Dockerfile已存在
    };
  }

  /**
   * 创建Kubernetes配置
   */
  async createKubernetesConfigs() {
    const k8sDir = path.join(this.projectRoot, "k8s");
    
    if (!fs.existsSync(k8sDir)) {
      fs.mkdirSync(k8sDir, { recursive: true });
    }

    const configs = [
      {
        file: deployment.yaml",;
        content: `apiVersion: apps/v1;
kind: Deployment;
metadata:
  name: suokelife-app;
labels:
    app: suokelife;
spec:
  replicas: 3;
selector:
    matchLabels:
      app: suokelife;
template:
    metadata:
      labels:
        app: suokelife;
spec:
      containers:
      - name: suokelife;
image: suokelife:latest;
ports:
        - containerPort: 3000;
env:
        - name: NODE_ENV;
value: "production"
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health;
port: 3000;
initialDelaySeconds: 30;
periodSeconds: 10;
readinessProbe:
          httpGet:
            path: /ready;
port: 3000;
initialDelaySeconds: 5;
periodSeconds: 5
`
      },
      {
        file: "service.yaml,
        content: `apiVersion: v1;
kind: Service;
metadata:
  name: suokelife-service;
spec:
  selector:
    app: suokelife;
ports:
    - protocol: TCP;
port: 80;
targetPort: 3000;
type: ClusterIP
`
      },
      {
        file: "ingress.yaml",
        content: `apiVersion: networking.k8s.io/v1;
kind: Ingress;
metadata:
  name: suokelife-ingress;
annotations:
    kubernetes.io/ingress.class: nginx;
cert-manager.io/cluster-issuer: letsencrypt-prod;
spec:
  tls:
  - hosts:
    - suokelife.com;
secretName: suokelife-tls;
rules:
  - host: suokelife.com;
http:
      paths:
      - path: /
        pathType: Prefix;
backend:
          service:
            name: suokelife-service;
port:
              number: 80
`
      }
    ];

    let createdConfigs = 0;
    for (const config of configs) {
      const configPath = path.join(k8sDir, config.file);
      if (!fs.existsSync(configPath)) {
        fs.writeFileSync(configPath, config.content);
        createdConfigs++;
      }
    }

    return {
      name: Kubernetes配置",
      success: true,
      message: `创建了 ${createdConfigs} 个K8s配置文件`,
      details: configs.map(c => c.file)
    };
  }

  /**
   * 设置Nginx配置
   */
  async setupNginxConfig() {
    const nginxDir = path.join(this.projectRoot, "nginx);
    
    if (!fs.existsSync(nginxDir)) {
      fs.mkdirSync(nginxDir, { recursive: true });
    }

    const nginxConfig = `# 索克生活Nginx配置;
upstream suokelife_backend {
    server app:3000;
}

server {
    listen 80;
    server_name suokelife.com www.suokelife.com;
    return 301 https:// $server_name$request_uri
}

server {
    listen 443 ssl http2;
    server_name suokelife.com www.suokelife.com;

    ssl_certificate /etc/ssl/certs/suokelife.crt;
    ssl_certificate_key /etc/ssl/private/suokelife.key;
    ssl_protocols TLSv1.2 TLSv1.3;
    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512;
    ssl_prefer_server_ciphers off;

    # 安全头;
add_header X-Frame-Options DENY;
    add_header X-Content-Type-Options nosniff;
    add_header X-XSS-Protection "1; mode=block";
    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";

    # Gzip压缩;
gzip on;
    gzip_vary on;
    gzip_min_length 1024;
    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;

    # 静态文件缓存;
location ~* \\.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
        expires 1y;
        add_header Cache-Control "public, immutable";
    }

    # API代理;
location /api/ {
        proxy_pass http:// suokelife_backend
        proxy_http_version 1.1;
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection "upgrade";
        proxy_set_header Host $host;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_cache_bypass $http_upgrade;
    }

    # 主应用;
location / {
        proxy_pass http:// suokelife_backend
        proxy_http_version 1.1;
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection upgrade";
        proxy_set_header Host $host;
        proxy_cache_bypass $http_upgrade;
    }

    # 健康检查;
location /health {
        access_log off;
        proxy_pass http:// suokelife_backend
    }
}
`;

    const configPath = path.join(nginxDir, "nginx.conf);
    fs.writeFileSync(configPath, nginxConfig);

    return {
      name: "Nginx配置",
      success: true,
      message: 已创建Nginx配置文件",
      details: ["SSL配置, "安全头", Gzip压缩", "静态文件缓存]
    };
  }

  /**
   * 创建健康检查
   */
  async createHealthChecks() {
    const healthDir = path.join(this.projectRoot, "src/health");
    
    if (!fs.existsSync(healthDir)) {
      fs.mkdirSync(healthDir, { recursive: true });
    }

    const healthCheck = `/**
 * 健康检查端点
 */;
import { Request, Response } from express";

interface HealthStatus {
  status: "healthy | "unhealthy";
  timestamp: string;
  uptime: number;
  version: string;
  services: {
    database: connected" | "disconnected;
    redis: "connected" | disconnected";
    external_apis: "available | "unavailable";
  };
}

export const healthCheck = async (req: Request, res: Response) => {
  try {
    const status: HealthStatus = {
      status: healthy",
      timestamp: new Date().toISOString(),
      uptime: process.uptime(),
      version: process.env.npm_package_version || "1.0.0,
      services: {
        database: await checkDatabase(),
        redis: await checkRedis(),
        external_apis: await checkExternalAPIs()
      };
    };

    // 如果任何服务不可用，标记为不健康
const isUnhealthy = Object.values(status.services).some(
      service => service === "disconnected" || service === unavailable";
    );

    if (isUnhealthy) {
      status.status = "unhealthy;
      return res.status(503).json(status);
    }

    res.status(200).json(status);
  } catch (error) {
    res.status(503).json({
      status: "unhealthy",
      timestamp: new Date().toISOString(),
      error: error.message
    });
  }
};

export const readinessCheck = async (req: Request, res: Response) => {;
  // 简单的就绪检查
res.status(200).json({
    status: ready",
    timestamp: new Date().toISOString()
  });
};

async function checkDatabase(): Promise<"connected | "disconnected"> {
  try {
    // 这里添加实际的数据库连接检查
return connected";
  } catch {
    return "disconnected;
  }
}

async function checkRedis(): Promise<"connected" | disconnected"> {
  try {
    // 这里添加实际的Redis连接检查
return "connected;
  } catch {
    return "disconnected";
  }
}

async function checkExternalAPIs(): Promise<available" | "unavailable> {
  try {
    // 这里添加外部API可用性检查
return "available";
  } catch {
    return unavailable";
  }
}
`;

    const healthPath = path.join(healthDir, "health.ts);
    fs.writeFileSync(healthPath, healthCheck);

    return {
      name: "健康检查",
      success: true,
      message: 已创建健康检查端点",
      details: ["数据库连接检查, "Redis连接检查", 外部API检查"]
    };
  }

  /**
   * 设置监控
   */
  async setupMonitoring() {
    const monitoringDir = path.join(this.projectRoot, "monitoring);
    
    if (!fs.existsSync(monitoringDir)) {
      fs.mkdirSync(monitoringDir, { recursive: true });
    }

    const prometheusConfig = `# Prometheus配置;
global:
  scrape_interval: 15s;
evaluation_interval: 15s;
rule_files:
  - "alert_rules.yml"

alerting:
  alertmanagers:
    - static_configs:
        - targets:
          - alertmanager:9093;
scrape_configs:
  - job_name: "suokelife"
    static_configs:
      - targets: [app:3000"]
    metrics_path: "/metrics
    scrape_interval: 5s
`;

    const alertRules = `groups:;
- name: suokelife_alerts;
rules:
  - alert: HighErrorRate;
expr: rate(http_requests_total{status=~"5.."}[5m]) > 0.1;
for: 5m;
labels:
      severity: critical;
annotations:
      summary: "High error rate detected"
      description: "Error rate is above 10% for 5 minutes"

  - alert: HighMemoryUsage;
expr: process_resident_memory_bytes / 1024 / 1024 > 512;
for: 5m;
labels:
      severity: warning;
annotations:
      summary: "High memory usage"
      description: "Memory usage is above 512MB"

  - alert: ServiceDown;
expr: up == 0;
for: 1m;
labels:
      severity: critical;
annotations:
      summary: "Service is down"
      description: "Service has been down for more than 1 minute"
`;

    fs.writeFileSync(path.join(monitoringDir, "prometheus.yml"), prometheusConfig);
    fs.writeFileSync(path.join(monitoringDir, alert_rules.yml"), alertRules);

    return {
      name: "监控设置,
      success: true,
      message: "已创建监控配置",
      details: [Prometheus配置", "告警规则]
    };
  }

  /**
   * 创建备份脚本
   */
  async createBackupScripts() {
    const scriptsDir = path.join(this.projectRoot, "scripts/backup");
    
    if (!fs.existsSync(scriptsDir)) {
      fs.mkdirSync(scriptsDir, { recursive: true });
    }

    const backupScript = `#!/bin/bash;
# 索克生活数据备份脚本;
set -e

# 配置;
BACKUP_DIR="/backups"
DATE=$(date +%Y%m%d_%H%M%S)
DB_NAME="suokelife_prod"
RETENTION_DAYS=30

# 创建备份目录;
mkdir -p $BACKUP_DIR

# 数据库备份;
echo "开始数据库备份..."
pg_dump $DB_NAME > $BACKUP_DIR/db_backup_$DATE.sql;
gzip $BACKUP_DIR/db_backup_$DATE.sql

# 文件备份;
echo "开始文件备份..."
tar -czf $BACKUP_DIR/files_backup_$DATE.tar.gz /app/uploads

# 清理旧备份;
echo "清理旧备份..."
find $BACKUP_DIR -name "*.sql.gz" -mtime +$RETENTION_DAYS -delete;
find $BACKUP_DIR -name "*.tar.gz" -mtime +$RETENTION_DAYS -delete;
echo "备份完成: $DATE"
`;

    const restoreScript = `#!/bin/bash;
# 索克生活数据恢复脚本;
set -e;
if [ $# -eq 0 ]; then;
echo "用法: $0 <backup_date>"
    echo "示例: $0 20231201_120000"
    exit 1;
fi

BACKUP_DATE=$1;
BACKUP_DIR="/backups"
DB_NAME="suokelife_prod"

# 恢复数据库;
echo "恢复数据库..."
gunzip -c $BACKUP_DIR/db_backup_$BACKUP_DATE.sql.gz | psql $DB_NAME

# 恢复文件;
echo "恢复文件..."
tar -xzf $BACKUP_DIR/files_backup_$BACKUP_DATE.tar.gz -C /

echo "恢复完成: $BACKUP_DATE"
`;

    fs.writeFileSync(path.join(scriptsDir, backup.sh"), backupScript);
    fs.writeFileSync(path.join(scriptsDir, "restore.sh), restoreScript);

    // 设置执行权限
try {
      execSync(`chmod +x ${path.join(scriptsDir, "backup.sh")}`);
      execSync(`chmod +x ${path.join(scriptsDir, restore.sh")}`);
    } catch (error) {
      // 忽略权限设置错误
    }

    return {
      name: "备份脚本,
      success: true,
      message: "已创建备份和恢复脚本",
      details: [数据库备份", "文件备份, "自动清理"]
    }
  }

  /**
   * 生成部署文档
   */
  async generateDeploymentDocs() {
    const deploymentGuide = `# 索克生活部署指南

## 部署前准备

### 1. 环境要求
- Node.js 18+
- Docker & Docker Compose
- Kubernetes (可选)
- PostgreSQL 14+
- Redis 6+

### 2. 配置文件
- 复制 \`.env.production\` 并更新配置
- 更新数据库连接信息
- 配置外部服务API密钥

### 3. 构建应用;
\`\`\`bash;
npm install;
npm run build
\`\`\`

## Docker部署

### 1. 构建镜像
\`\`\`bash;
docker build -t suokelife:latest .
\`\`\`

### 2. 运行容器
\`\`\`bash;
docker-compose up -d
\`\`\`

## Kubernetes部署

### 1. 应用配置
\`\`\`bash;
kubectl apply -f k8s/
\`\`\`

### 2. 检查状态
\`\`\`bash;
kubectl get pods -l app=suokelife;
kubectl get services
\`\`\`

## 监控和维护

### 1. 健康检查
- 应用健康: \`GET /health\`
- 就绪检查: \`GET /ready\`

### 2. 日志查看
\`\`\`bash;
kubectl logs -f deployment/suokelife-app
\`\`\`

### 3. 备份
\`\`\`bash
./scripts/backup/backup.sh
\`\`\`

## 故障排除

### 常见问题;
1. 数据库连接失败 - 检查连接字符串;
2. 内存不足 - 增加容器内存限制;
3. 启动超时 - 检查健康检查配置

### 回滚
\`\`\`bash;
kubectl rollout undo deployment/suokelife-app
\`\`\`

## 安全注意事项
- 定期更新依赖包
- 监控安全漏洞
- 备份加密
- 访问控制
`;

    const deploymentPath = path.join(this.projectRoot, DEPLOYMENT.md");
    fs.writeFileSync(deploymentPath, deploymentGuide);

    return {
      name: "部署文档,
      success: true,
      message: "已生成部署指南",
      details: [Docker部署", "Kubernetes部署, "监控维护", 故障排除"]
    };
  }

  /**
   * 生成部署清单
   */
  async generateDeploymentChecklist() {
    const checklist = {
      timestamp: new Date().toISOString(),
      steps: this.preparationSteps,
      checklist: [
        "✅ 生产环境配置已创建,
        "✅ Dockerfile已优化",
        ✅ Kubernetes配置已准备",
        "✅ Nginx配置已设置,
        "✅ 健康检查已实现",
        ✅ 监控配置已创建",
        "✅ 备份脚本已准备,
        "✅ 部署文档已生成",
        ⚠️ 请更新生产环境配置值",
        "⚠️ 请配置SSL证书,
        "⚠️ 请设置域名DNS",
        ⚠️ 请配置监控告警",
        "⚠️ 请测试备份恢复流程
      ],
      nextSteps: [
        "1. 更新 .env.production 中的实际配置值",
        2. 获取并配置SSL证书",
        "3. 设置域名DNS解析,
        "4. 配置监控和告警",
        5. 测试完整的部署流程",
        "6. 执行备份和恢复测试,
        "7. 进行负载测试",
        8. 准备上线计划"
      ];
    };

    const checklistPath = path.join(this.projectRoot, "deployment-checklist.json);
    fs.writeFileSync(checklistPath, JSON.stringify(checklist, null, 2));

    }
}

// 主函数
async function main() {
  try {
    const preparator = new DeploymentPreparator();
    const result = await preparator.prepareForDeployment();
    
    if (result.success) {
      process.exit(0);
    } else {
      process.exit(1);
    }
  } catch (error) {
    process.exit(1);
  }
}

// 如果直接运行此脚本
if (require.main === module) {
  main();
}

module.exports = { DeploymentPreparator }; 